[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "aiidalab-qe-muon"
dynamic = ["version"] # read from aiidalab_qe_muon/__init__.py
description = "aiidalab-quantumespresso plugin that allows to find candiate muon implantation sites and hyperfine field by DFT supercell relaxations and from further symmetry and kinetics analysis.  "
authors = [{name = "Miki Bonacci, Ifeanyi John Onuoroah, Pietro Bonfa' and Giovanni Pizzi"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Development Status :: 2 - Pre-Alpha",
    "Framework :: AiiDAlab"
]
keywords = ["aiidalab", "muon"]
requires-python = ">=3.8"
dependencies = []

[project.urls]
Source = "https://github.com/positivemuon/aiida-muon"

[project.optional-dependencies]
docs = [
    "sphinx",
    "docutils",
    "sphinx-copybutton~=0.3.0",
    "sphinx-book-theme~=0.1.0",
    "sphinx-click~=2.7.1"
]
pre-commit = [
    "pre-commit>=2.21.0"
]
tests = [
    "pgtest~=1.3",
    "pytest~=6.0",
    "pytest-regressions~=2.3"
]

[project.entry-points."aiidalab_qe.properties"]
"muonic" = "aiidalab_qe_muon.app:property"

[project.entry-points."aiida.workflows"]
"muon_app.implant_muon" = "aiidalab_qe_muon.workflows.implantmuonworkchain:ImplantMuonWorkChain"

[tool.flit.module]
name = "aiidalab_qe_muon"

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
    "tests"
]