[metadata]
name = aiidalab-qe-muon
version = 0.0.1
description = aiidalab-quantumespresso plugin that allows to find candiate muon implantation sites and hyperfine field by DFT supercell relaxations and from further symmetry and kinetics analysis.  
long_description = file: README.md
url = https://github.com/positivemuon/aiida-muon
author = Miki Bonacci, Ifeanyi John Onuoroah, Pietro Bonfa and Giovanni Pizzi
readme = README.md
license = MIT
classifiers = 
    Programming Language :: Python
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Development Status :: 2 - Pre-Alpha
    Framework :: AiiDAlab

keywords = 
    aiidalab
    muon

requires_python = >=3.8

[options]
install_requires =
   aiida-muon @ git+https://github.com/positivemuon/aiida-muon@dev_StructureData 
   pymatgen>=2023.9.25
   #aiidalab-widget-base=2.1.0a0


[options.extras_require]
docs = 
    sphinx
    docutils
    sphinx-copybutton~=0.3.0
    sphinx-book-theme~=0.1.0
    sphinx-click~=2.7.1

pre-commit = 
    pre-commit>=2.21.0

tests = 
    pgtest~=1.3
    pytest~=6.0
    pytest-regressions~=2.3

[options.entry_points]
aiidalab_qe.properties =
    muonic = aiidalab_qe_muon.app:property
aiida.workflows=
    muon_app.implant_muon = aiidalab_qe_muon.workflows.implantmuonworkchain:ImplantMuonWorkChain
console_scripts=
    install_muon_codes = aiidalab_qe_muon.scripts.post_install:InstallCodes

[options.package_data]
aiidalab_qe_muon.app.data = *